compiler/tools/fpp-check/test/port_instance/undef_time_get.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_instance/undef_time_get.fpp:3.3
  time get port timeGetOut
  ^
error: symbol Fw is not defined
note: looking for a port here
note: the symbol Fw.Time has an implied use at the point of the error
